# job-scrapper-contracts

./: README.md  pyproject.toml
scripts/: reinstall_packages.sh
src/job_scrapper_contracts/: __init__.py  interface.py  models.py  scrape_filter.py
src/job_scrapper_contracts/messages/: __init__.py  scrape_filter.py  scrape_request.py  scrape_response.py
src/job_scrapper_contracts/models/: __init__.py  company.py  job.py  location.py  salary.py
