[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-scrapper-contracts"
version = "0.1.1"
description = "Contract definitions for job scrapper services"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "EvilMangos", email = "maksymkhamets.career@gmail.com"}
]
keywords = ["jobs", "scrapping", "contracts", "interface"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "black>=25.9.0",
    "ruff>=0.14.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
job_scrapper_contracts = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
